fix: adjust catalog popup functionality, add overflow scroll and correct HTML structure

--- a/css/bouquet-popup.css
+++ b/css/bouquet-popup.css
@@ -10,6 +10,7 @@
   align-items: center;
   background-color: rgba(197, 141, 145, 0.6);
   z-index: 100;
+  overflow-y: scroll;
 }
 
 @keyframes bouquet-popup {
@@ -31,14 +32,15 @@
 }
 
 .bouquet-popup__inner {
-  max-width: 80%;
-  margin: 20px;
+  width: 80%;
   padding: 30px;
   border-radius: 7px;
   background-color: #fff;
-  position: relative;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
   animation: bouquet-popup 0.6s;
-  overflow-y: auto;
 }
 
 .bouquet-popup__inner_close {
@@ -76,27 +78,48 @@
   font-family: "Tangerine", cursive;
   color: #59313b;
   font-size: 30px;
+  line-height: 1;
+}
+
+.bouquet-popup__text {
+  text-align: left;
+  margin-top: 20px;
+  display: none;
 }
 
 .bouquet-popup__content {
   display: flex;
   justify-content: center;
-  gap: 40px;
   flex-wrap: wrap;
+  gap: 40px;
   margin-bottom: 20px;
 }
 
-.bouquet-popup__img {
+.bouquet-popup__img-wrapper {
   width: calc(50% - 20px);
   max-width: 400px;
+  min-width: 280px;
 }
 
-.bouquet-popup__footer {
+.bouquet-popup__img {
+  width: 100%;
+}
+
+.bouquet-popup__aside {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 15px;
   font-size: 40px;
+  font-size: calc(18px + 20 * (100vw / 1440));
+}
+
+.bouquet-popup__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
 }
 
 .bouquet-popup__btn {
@@ -129,10 +152,25 @@
   background-color: transparent;
 }
 
-.bouquet-popup__span {
-  font-size: 24px;
-}
-
 .bouquet-popup__count {
   font-size: 18px;
+  transition: 0.4s;
+}
+
+@media (max-width: 400px) {
+  .bouquet-popup__inner {
+    padding: 20px;
+    width: 90%;
+  }
+
+  .bouquet-popup__close {
+    top: 3px;
+    right: 3px;
+  }
+}
+
+@media (max-width: 380px) {
+  .bouquet-popup__inner {
+    width: 100%;
+  }
 }
